--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Evans - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Tarun - Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -31,14 +31,13 @@
   <body>
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Evans</a>
+	      <a class="navbar-brand" href="index.html">Tarun</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
 	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
@@ -52,7 +51,7 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end">
           <div class="col-md-9 ftco-animate pb-5">
-            <h2 class="mb-3 bread">Contact Us</h2>
+            <h2 class="mb-3 bread">Contact</h2>
             <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>About us <i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
@@ -62,6 +61,7 @@
     <section class="contact-section bg-primary">
       <div class="container">
         <div class="row no-gutters d-flex contact-info">
+          <!--
           <div class="col-md-3 d-flex">
           	<div class="align-self-stretch box p-4 py-md-5 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
@@ -71,13 +71,14 @@
 	            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
 	          </div>
           </div>
+          -->
           <div class="col-md-3 d-flex">
           	<div class="align-self-stretch box p-4 py-md-5 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+	            <p><a href="tel://1234567920">+91 8109038790</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
@@ -86,7 +87,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+	            <p><a href="mailto:info@yoursite.com">tiwaritarun936@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
@@ -95,7 +96,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">yoursite.com</a></p>
+	            <p><a href="#">https://github.com/Tarun260103</a></p>
 	          </div>
           </div>
         </div>
@@ -106,7 +107,7 @@
       <div class="container-fluid px-0">
         <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
-            <form action="#" class="bg-light p-5 contact-form">
+            <form action="https://formspree.io/f/xeqyzkbz" method = "post" class="bg-light p-5 contact-form">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Your Name">
               </div>
@@ -139,14 +140,16 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About Us</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Proficient Software developer eager to bridge the gap between technology and innovation</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://twitter.com/Taruntiwari2601"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://github.com/Tarun260103"><span class="icon-github"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/tiwari_tarun/?hl=en"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/tarun-tiwari-0139a7252"><span class="icon-linkedin"></span></a></li>
               </ul>
             </div>
           </div>
+          <!--
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Information</h2>
@@ -168,14 +171,15 @@
               </ul>
             </div>
           </div>
+        -->
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	              
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 8109038790</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">tiwaritarun936@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -185,7 +189,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://github.com/Tarun260103" target="_blank">Tarun260103</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
