--- a/work.html
+++ b/work.html
@@ -89,7 +89,7 @@
 	  								<div class="desc">
 		  								<div class="top top-relative">
 			  								<span class="subheading">Data Structure</span>
-				  							<h2 class="mb-4"><a href="single.html">Pojects</a></h2>
+				  							<h2 class="mb-4"><a href="single.html">Projects</a></h2>
 			  							</div>
 			  							<div class="absolute relative">
 				  							<p>Created a Zig Zag list using Data Structures concept like Linked List</p>
