--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">tiwaritarun936@gmail.com</a></p>
+	            <p><a href="mailto:tiwaritarun936@gmail.com">tiwaritarun936@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
@@ -127,9 +127,6 @@
           
           </div>
 
-          <div class="col-md-6 d-flex">
-          	<div id="map" class="bg-white"></div>
-          </div>
         </div>
       </div>
     </section>
