--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
   <body>
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Tarun</a>
+	      <a class="navbar-brand" style = "color : black " href="index.html">Tarun</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -39,9 +39,9 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 
-	        	<li class="nav-item active"><a href="work.html" class="nav-link">Work</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-			  <li class="nav-item"><a href="images/cv.pdf" class="nav-link">DOWNLOAD CV</a></li>
+	        	<li class="nav-item active"><a style = "color : black "ref="work.html" class="nav-link">Work</a></li>
+	          <li class="nav-item"><a style = "color : black " href="contact.html" class="nav-link">Contact</a></li>
+			  <li class="nav-item"><a style = "color : black " href="images/cv.pdf" class="nav-link">DOWNLOAD CV</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -213,7 +213,7 @@
 			<div class="col-md">
 			  <div class="ftco-footer-widget mb-4">
 				<h2 class="ftco-heading-2">About</h2>
-				<p></p>Whatever you do for others comes around to help you, as well, in the end.</p>
+				<p></p>Proficient Software developer eager to bridge the gap between technology and innovation</p>
 				<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 				  <li class="ftco-animate"><a target="_blank" href="https://twitter.com/Taruntiwari2601"><span class="icon-twitter"></span></a></li>
 				  <li class="ftco-animate"><a target="_blank" href="https://github.com/Tarun260103"><span class="icon-github"></span></a></li>
