--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	        	<li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 			  <li class="nav-item"><a href="images/cv.pdf" class="nav-link">DOWNLOAD CV</a></li>
+			  <li class="nav-item"><a href="certificate.html" class="nav-link">CERTIFICATES</a></li>
 	        </ul>
 	      </div>
 	    </div>
